--- a/style.css
+++ b/style.css
@@ -9,5 +9,8 @@
 .grid div {
   height: 20px;
   width: 20px;
-  background-color: red;
+}
+/* This is a comment */
+.tetromino {
+  background-color: blue;
 }
